--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
   /* min-height: 150vh; */
   display: grid;
  margin: 0 auto;
-
  border: 1px solid red;
 }
 
@@ -170,6 +169,7 @@ background-position: center center;
  text-align: center;
 }
 
+
 .btn {
    color: white;
    background: #3a6cf4;
@@ -186,6 +186,7 @@ background-position: center center;
    margin-bottom: 10px;
 }
 
+/* Product */
 .section-1{
  height: 700px;
  background-color: beige;
@@ -240,13 +241,57 @@ border-radius: 8px;
 }
 
 article:hover {
-
  box-shadow: grey 2px 3px 5px;
 }
 
+/* Footer */
 footer{
  background-color: rgb(2, 22, 22);
  text-align: center;
  padding: 10px;
  color: white;
+}
+
+@media (max-width: 1040px) {
+     /* header {
+     padding: 0px 20px;
+    }  */
+    
+    header .container {
+     flex-direction: column;
+     align-items: flex-start;
+    }
+    
+    header .container nav {
+     height: 0;
+     width: 100%;
+     overflow: hidden;
+     transition: 0.5s height ease-in-out;
+    }
+    
+    header .container nav ul li {
+     display: block;
+     text-align: center;
+     padding: 1.5rem 0;
+    }
+    
+    header .container nav ul li a {
+     font-size: 1.4rem;
+    }
+    
+    header .container .nav-toggle {
+     display: block;
+    }
+    
+    header .container .nav-toggle img {
+     background: #fff;
+     /* color: #0000; */
+    }
+
+    .div3{
+     flex-direction: column;
+     align-items: center;
+     justify-content: space-evenly;
+     gap: 2em;
+    }
 }
