--- a/main.css
+++ b/main.css
@@ -4,11 +4,16 @@
  box-sizing: border-box;
 }
 
+body {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+}
+
 .form {
  justify-content: center;
  display: flex;
- padding-top: 70px;
- padding-bottom: 100px;
+  margin: 0 auto;
 }
 
 .here {
@@ -16,7 +21,6 @@
  text-align: center;
  text-transform: capitalize;
 }
-
 hr {
  width: 300px;
  margin: 0 auto;
@@ -58,4 +62,14 @@ div {
  font-family: Impact;
  border-radius: 7%;
  border: none;
+}
+
+@media (max-width: 769px) {
+ .form {
+  padding: 0px;
+ }
+
+ #form {
+  width: 350px;
+ }
 }
